--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -21,11 +21,20 @@
     "dev": "nest start --watch"
   },
   "dependencies": {
+    "@fastify/compress": "^8.3.0",
+    "@fastify/cookie": "^11.0.2",
+    "@fastify/cors": "^11.2.0",
+    "@fastify/helmet": "^13.0.2",
+    "@fastify/rate-limit": "^10.3.0",
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/platform-fastify": "^11.1.9",
+    "@nestjs/throttler": "^6.5.0",
     "axios": "^1.13.2",
+    "axios-retry": "^4.5.0",
+    "opossum": "^9.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
