--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,8 +5,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev --port 4200",
-    "build": "next build",
-    "start": "next start",
+    "build": "next build --debug-prerender",
+    "start": "next start --port 4200",
+    "start:prod": "next start --port 4200",
     "lint": "eslint --max-warnings 0",
     "check-types": "next typegen && tsc --noEmit"
   },
